--- a/style.css
+++ b/style.css
@@ -50,12 +50,11 @@ p{
     /*
     border: 3px solid rgb(255,129,49);
     */
-    margin-top:50px;
     padding-top:20px;
-    height:300px;
     padding-bottom:20px;
-    margin-bottom:50px;
   }
+
+  
 
   .generate button{
     padding: 10px 25px;
@@ -114,14 +113,14 @@ body{
 
 .container{
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
-    min-height: 100vh;
+    margin: auto;
     background:white;
-    padding-top: 50px;
-
+    padding-top: 0px;
+    margin-top: 100px;
   }
-  
+
 .drag-area{
   border: 5px dashed rgb(255,129,49);
   height: 500px;
@@ -240,6 +239,7 @@ a{
   background-color: white;
 }
 
+
 .selectBox:hover{
   background-color: white;
 }
@@ -259,6 +259,7 @@ a{
   border:2px solid #ccc; 
   height: 100%;
   overflow-y: scroll;
+  height: 200px;
 }
 
 #checkboxes label {
@@ -345,14 +346,16 @@ a{
 
 /*FOR MOBILE DISPLAY*/
 @media screen and (max-width: 950px) {
+  canvas{
+    height: 50vh;
+  }
+
   .generate{
-    
     display: table;
     flex-direction: row;
     justify-content: center; /*horizontal*/
     align-items: center; /*vertical*/
     margin: auto;
-
   }
 
   .multiselect {
@@ -370,6 +373,9 @@ a{
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+  }
+  #share_page{
+    padding-right: 5px;
   }
 }
 
