--- a/style.css
+++ b/style.css
@@ -22,14 +22,38 @@ img{
 }
 
 canvas{
-    width: 100%;
+    width: 80%;
     z-index: -1;
-    height: 100vh;
+    height: auto;
 }
 
-p{
-  max-width: 50%;
-  display:inline;
+.intro{
+  font-size: 30px;
+  margin: 40px;
+}
+
+.intro a{
+  color: black;
+}
+
+.intro p{
+  font-weight: 500;
+  margin-left: 40px;
+  padding: 50px;
+  text-align: center;
+}
+
+.intro img{
+  width: 15%;
+  height: auto;
+}
+
+.info{
+ 
+}
+.info p{
+  font-weight: 500;
+  text-align: center;
 }
 
 #email{
@@ -354,9 +378,10 @@ a{
 /* INSTRUCTIONS*/
 .grid {
   display: grid;
-  grid-gap: 1px;
+  grid-gap: 2px;
   grid-template-columns: repeat(3, 1fr);
   margin: 50px;
+  margin-bottom: 10px;
 }
 
 .cell {
@@ -412,16 +437,70 @@ br{
 }
 
 .output_instructions canvas{
-  height: 100%;
+  height: auto;
   width: 100%;
+}
+
+.total-cost{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.dimensions{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  margin: auto;
+}
+.dimensions label{
+  padding: 10px 25px;
+  font-size: 20px;
+  font-weight: 500;
+  outline: none;
+  margin-left:0px;
+  color: black;
+  border-radius: 5px;
+  border: 3px solid rgb(0,108,180);
+}
+
+.grid {
+  display: grid;
+  grid-gap: 2px;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 50px;
+  margin-bottom: 10px;
+}
+
+.cell {
+  padding: 10px;
+  background-color: rgb(0,108,180);
+  border: 3px solid rgb(0,108,180);
+  color: white;
+}
+
+.total-legos{
+  text-align: center;
+}
+
+.total-legos div{
+  display: inline-block;
+  width:auto;
+  border: 3px solid black;
+  Padding: 25px;
+  font-size: 20px;
+  margin: 20px;
+}
+
+#total{
+  font-size: 40px;
 }
 
 
 /*FOR MOBILE DISPLAY*/
 @media screen and (max-width: 950px) {
-  canvas{
-    height: 50vh;
-  }
 
   .generate{
     display: table;
@@ -454,33 +533,32 @@ br{
     display: inline-block;
   }
   .instructions li{
-    margin-left:25%;
+    margin-left: 12%;
     max-width: 75%;
   }
   a{
     font-size: 15px;
+    color: white;
   }
   .output_instructions{
-    padding-top: 0px;
+    padding-top: 40px;
   }
-}
 
-.total-cost{
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-}
-
-.total-legos{
-  text-align: center;
-}
-
-.total-legos div{
-  display: inline-block;
-  width:auto;
-  border: 3px solid black;
-  Padding: 25px;
-  font-size: 20px;
-  margin: 20px;
+  .total-legos div{
+    display: inline-block;
+    width:auto;
+    Padding: 15px;
+    font-size: 12px;
+    margin: 10px;
+  }
+  .intro{
+    font-size: 15px;
+    margin: 0px;
+  }
+  .intro img{
+    width: 30%;
+  }
+  #total{
+    font-size: 20px;
+  }
 }
